--- a/Presentation/ApiProject.Api/appsettings.Development.json
+++ b/Presentation/ApiProject.Api/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ApiProject;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=ApiProject;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
