--- a/Core/ApiProject.Application/ApiProject.Application.csproj
+++ b/Core/ApiProject.Application/ApiProject.Application.csproj
@@ -8,15 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ApiProject.Domain\ApiProject.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Products\Command\" />
   </ItemGroup>
 
 </Project>
