Token JWT eklendi

--- a/Presentation/ApiProject.Api/appsettings.Development.json
+++ b/Presentation/ApiProject.Api/appsettings.Development.json
@@ -1,5 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=ApiProject;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "Audience": "http://localhost:5000",
+    "Issuer": "http://localhost:5000",
+    "Secret": "pia)5u1v)g4wr-cm@5e@+2%hl8&(8bxs+06!va-wgt6kv@2^u+",
+    "TokenValidityInMinutes": 15,
+    "RefreshTokenValidityInDays": 60
   }
 }
