--- a/Presentation/ApiProject.Api/ApiProject.Api.csproj
+++ b/Presentation/ApiProject.Api/ApiProject.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\ApiProject.Mapper\ApiProject.Mapper.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\ApiProject.Infrastructure\ApiProject.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\ApiProject.Persistence\ApiProject.Persistence.csproj" />
   </ItemGroup>
 
