--- a/Core/ApiProject.Application/ApiProject.Application.csproj
+++ b/Core/ApiProject.Application/ApiProject.Application.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\ApiProject.Domain\ApiProject.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Auth\Queries\" />
+  </ItemGroup>
+
 </Project>
