Redis temelleri atildi.

--- a/Presentation/ApiProject.Api/appsettings.Development.json
+++ b/Presentation/ApiProject.Api/appsettings.Development.json
@@ -8,5 +8,9 @@
     "Secret": "pia)5u1v)g4wr-cm@5e@+2%hl8&(8bxs+06!va-wgt6kv@2^u+",
     "TokenValidityInMinutes": 15,
     "RefreshTokenValidityInDays": 60
+  },
+  "RedisCacheSettings": {
+    "ConnectionString": "localhost, abortConnect=false",
+    "InstanceName" : "Redis_ApiProject"
   }
 }
