--- a/Presentation/ApiProject.Api/appsettings.Development.json
+++ b/Presentation/ApiProject.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ApiProject;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ApiProject;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JWT": {
     "Audience": "http://localhost:5000",
